Fix IE 11 display bug for examples by avoiding flexbox, fixes #583
Remove CSS scrollbars, fixes #584

--- a/tasks/resources/docs/css/docs.css
+++ b/tasks/resources/docs/css/docs.css
@@ -28,6 +28,13 @@ html {
   box-shadow: 0 0 18px rgba(0,0,0,.15);
 }
 
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cssdocs-example {
+    /* Fix example layout in IE11 */
+    display: block;
+  }
+}
+
 .cssdocs-example-demo,
 .cssdocs-example-markup {
   box-sizing: border-box;
@@ -171,7 +178,6 @@ pre code {
   background: linear-gradient(to bottom, rgba(40,40,40,0) 10%,rgba(40,40,40,1) 100%);
 }
 
-
 /** **/
 
 .sdldocs-outer {
@@ -185,44 +191,9 @@ pre code {
 }
 
 .sdldocs-scrollable {
-  -webkit-background-clip: text;
+  overflow-x: hidden;
+
   -webkit-overflow-scrolling: touch;
-  transition: background-color 250ms linear;
-  background-color: rgba(0, 0, 0, 0) !important;
-  transition-delay: 750ms;
-}
-
-.sdldocs-scrollable > .spectrum {
-  padding-right: 6px;
-}
-
-.sdldocs-scrollable:hover {
-  background-color: rgba(0, 0, 0, 0.12) !important;
-  transition-delay: 0s;
-}
-
-.sdldocs-scrollable::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-  border-radius: 6px;
-}
-
-.sdldocs-scrollable::-webkit-scrollbar-thumb {
-  border-radius: 6px;
-}
-
-.sdldocs-scrollable::-webkit-scrollbar,
-.sdldocs-scrollable::-webkit-scrollbar-thumb {
-  background-color: inherit;
-  transition: background-color 250ms linear;
-}
-
-.sdldocs-scrollable::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0, 0, 0, 0.20);
-}
-
-.sdldocs-scrollable::-webkit-scrollbar-thumb:active {
-  background-color: rgba(0, 0, 0, 0.25);
 }
 
 .sdldocs-splitview {
